--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
-    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "swiper": "^12.0.2",
-    "tailwindcss": "^4.1.14"
+    "react-icons": "^5.5.0",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
@@ -22,6 +22,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/swiper": "^5.4.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
 }
