--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "lottie-react": "^2.4.1",
@@ -15,6 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
