--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "corex",
+  "name": "my-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
-    "export": "next export"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.8.1",
+    "framer-motion": "^12.12.1",
     "lottie-react": "^2.4.1",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.546.0",
     "moment": "^2.30.1",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.3.2",
+    "nodemailer": "^7.0.9",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
-    "react-loading-skeleton": "^3.5.0",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/swiper": "^5.4.3",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
