--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "framer-motion": "^12.12.1",
@@ -14,6 +15,7 @@
     "lucide-react": "^0.546.0",
     "moment": "^2.30.1",
     "next": "^16.0.10",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.9",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
